# repo_helper_devenv

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contrib.rst  contributing.rst  index.rst  installation.rst  license.rst  requirements.txt  sphinx_click_tweak.py  usage.rst
doc-source/_templates/sidebar/: navigation.html
repo_helper_devenv/: __init__.py  cli.py
tests/: conftest.py  requirements.txt  test_devenv.py  test_install_requirements.py
tests/test_devenv_/: test_version_version_.txt  test_version_version_version_.txt
