[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "repo_helper_devenv"
version = "0.5.0"
description = "Create virtual environments with repo-helper."
readme = "README.rst"
keywords = [ "repo-helper", "virtualenv",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_devenv"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_devenv/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_devenv"
Documentation = "https://repo_helper_devenv.readthedocs.io/en/latest"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"

[project.entry-points."repo_helper.command"]
repo_helper_devenv = "repo_helper_devenv.cli:devenv"
